name:                cif
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/samueljackson92/cif#readme
license:             MIT
license-file:        LICENSE
author:              Samuel Jackson
maintainer:          samueljackson@outlook.com
copyright:           2018 Samuel Jackson
category:            Crystallography
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cif
  hs-source-dirs:      src
  other-modules:       Grammar,
                       Strings
                       Types,   
                       Utils
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec
